# k8s-app-bootstrap

./: Dockerfile  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: container.yaml
app/: __init__.py
example/vaultwarden/: app.yaml
